@@ -1,5 +1,8 @@
 2012-02-26  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* src/PJ_geos.c, nad/testvarious: Added GEOS +sweep and add GEOS 
+	to the test suite (#146)
+
 	* nad/CH: added swiss datum related definitions from strk (#145)
 
 	* src/Makefile.am, src/mutltistresstest.c: provide for building
